Fixed and tidied
Fixed a line of broken code (didn't reference anything) and got rid of extra spaces

--- a/main.css
+++ b/main.css
@@ -6,9 +6,6 @@
          
 }
 
-
-
-      
 .navbar-brand {
         padding: 15px;
         height: 80px;
@@ -63,10 +60,6 @@
         padding-right: 10%;
 }
 
-. {
-        text-align: center;
-}
-
 .aboutUsTitle{
         padding: 1rem;
 }
@@ -111,7 +104,6 @@
         color: black;
         font-style: normal;
 }
-
 
 .fa {
         padding: 20px;
